Fix Attribute crash on build.
Refactored some other stuff too.

--- a/Runtime/Lumina.Essentials.asmdef
+++ b/Runtime/Lumina.Essentials.asmdef
@@ -1,3 +1,12 @@
 {
-	"name": "Lumina.Essentials"
+	"name": "Lumina.Essentials",
+	"rootNamespace": "",
+	"references": [],
+	"includePlatforms": [],
+	"excludePlatforms": [],
+	"allowUnsafeCode": false,
+	"overrideReferences": false,
+	"precompiledReferences": [],
+	"autoReferenced": true,
+	"defineConstraints": []
 }
