--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.lumina.essentials",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "displayName": "Lumina's Essentials",
   "description": "A collection of scripts to make life with Unity a little more bearable.",
   "documentationUrl": "https://github.com/ltsLumina/Unity-Essentials",
@@ -19,5 +19,8 @@
     "email": "itsluminas@gmail.com",
     "url": "https://github.com/ltsLumina/Unity-Essentials"
   },
-  "unity": "2019.2"
+  "unity": "2019.2",
+  "dependencies": {
+    "com.cysharp.unitask": "2.3.3"
+  }
 }
