--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
     "email": "itsluminas@gmail.com",
     "url": "https://github.com/ltsLumina/Unity-Essentials"
   },
-  "unity": "2019.2",
+  "unity": "2019.2"
 }
