Rework of folder structure and sequencer class.

--- a/Editor/Lumina.Essentials.Editor.asmdef
+++ b/Editor/Lumina.Essentials.Editor.asmdef
@@ -1,7 +1,7 @@
 {
   "name": "Lumina.Essentials.Editor",
   "references": [
-    "Lumina.Essentials"
+    "GUID:3a7ae6877f705cc4586446264c396e32"
   ],
   "includePlatforms": [
     "Editor"
