--- a/Runtime/Lumina.Essentials.asmdef
+++ b/Runtime/Lumina.Essentials.asmdef
@@ -1,6 +1,6 @@
 {
 	"name": "Lumina.Essentials",
-	"rootNamespace": "",
+	"rootNamespace": "Lumina.Essentials",
 	"references": [],
 	"includePlatforms": [],
 	"excludePlatforms": [],
